# Ai-calling-Agent

./: .gitignore  main.py  pyproject.toml
Mainagent/: docker-compose.yaml  main.py  pyproject.toml  test_dilaer.py
voice ai agent calling dashboard/: main.py  pyproject.toml
