[project]
name = "ai-calling-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.15",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "livekit-agents[deepgram,openai,silero]>=1.5.12",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]
